--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,24 @@
         transform: rotate(360deg);
     }
 }
+
+input {
+    box-sizing: border-box;
+    padding: 10px;
+    margin: 5px 5px;
+    border: 1 solid #bc8f8f;
+    border-radius: 10px;
+    box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+}
+
+button {
+    padding: 10px;
+    border: none;
+    background-color: #bc8f8f;
+    color: #fff;
+    font-weight: 300;
+    border-radius: 10px;
+    width: 100px;
+    text-align: center;
+    margin-left: 30px;
+}
